--- a/styles/page&misc.css
+++ b/styles/page&misc.css
@@ -102,12 +102,16 @@ h1 {
 }
 @keyframes slide {
     0%   {width:0}
+    /*5% {width:50%}*/
+    /*25% {width:80%}*/
+    /*50% {width:90%}*/
+    /*75% {width:95%}*/
     100% {width:100%}
 }
 .connection-slider > *:not(.done):not(.fail) {
     animation-name: slide;
-    animation-duration: 1.2s;
-    animation-iteration-count: infinite;
+    animation-duration: 8s;
+    animation-iteration-count: 1;
     background-color: lightblue;
     animation-timing-function: cubic-bezier(.18, .83, .84, .88);
 }
